Removed js, added css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Rahul Shanwal Resume</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="src/styles.css"/>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -248,7 +249,5 @@
         </div>
       </div>
     </div>
-
-    <script src="src/index.js"></script>
   </body>
 </html>
