--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="side_bar">
         <div class="profileText">
           <div class="imgBox">
-            <img src="assets/pic.jpg" />
+            <img src="assets/picture.jpg" />
           </div>
           <h2>
             Rahul Shanwal <br />
