--- a/index.html
+++ b/index.html
@@ -107,14 +107,14 @@
       <div class="main_container">
         <div class="about">
           <h2 class="title">
-            Experience <span>(11 years - Front end development)</span>
+            Experience <span>(15 years - Front end development)</span>
           </h2>
           <div class="box">
             <div class="left-section">
               <h4 class="company_name">Ciena</h4>
               <h5>Aug 2020 - Present</h5>
               <h5 class="text tech">
-                Ember, ES6, Brocolli, python, html, css
+                React, Ember, ES6, Brocolli, python, html, css, web components
               </h5>
             </div>
             <ul>
